--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,11 @@ section {
     transition: ease 0.3s all;
 }
 
+.section__active {
+    border-bottom: 3px solid rgb(0, 0, 0);
+}
+
+
 /* Header Styles */
 .page__header {
     background: #fff;
@@ -220,4 +225,31 @@ section.active .landing__container::after {
 		           translate(-1em) 
 		           rotate(-360deg);
 	}
+}
+
+/* Scroll up button */
+#scrollUp img{
+    max-width: 70%;
+    max-height: 70%;
+    margin: 15% 15%;
+}
+
+#scrollUp {
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+ 
+    width: 50px;
+    height: 50px;
+ 
+    margin: 3rem;
+ 
+    background-color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50%;
+
+    box-shadow: 0px 2px 2px #333;
+    
+    cursor: pointer;
+    z-index: 10;
 }
